# Pytranscript

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python_publish.yml
src/: pytranscript.py
tests/: time_test.py
